# StudyPythonWithClaudeCode

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
scripts/: check-all.bat  check-all.sh  lint.bat  lint.sh  test-full.bat  test-full.sh  test.bat  test.sh
src/study_python/: __init__.py  calculator.py  logging_config.py
tests/: conftest.py  test_calculator.py  test_logging_config.py
